# VideoChatBot

./: .gitignore  .tool-versions  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml
resources/: my_export.json
src/VideoChatBot/: __init__.py
src/VideoChatBot/resources/samples/: sample0.json
tests/: test_simple.py
