[build-system]
requires = [
	"autopep8==1.5.6",
    "ChatterBot==1.1.0",
    "opencv-python==4.5.1.48",
    "SpeechRecognition==3.8.1",
    "matplotlib==3.3.4",
    "imageio==2.9.0",
    "pyttsx3==2.90",
    "text2emotion==0.0.5",
    "tensorflow==2.4.1",
    "fer==20.1.1",
	"setuptools>=42",
	"wheel"
]
build-backend = "setuptools.build_meta"